hphp/test/slow/exceptions/assign-this-in-catch.php.expectf
Fatal error: Invalid use of `$this`: it cannot be re-assigned via a `catch` clause in %s/test/slow/exceptions/assign-this-in-catch.php on line 7